k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: leengvocab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /auth-service
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /user-profile-service
            pathType: Prefix
            backend:
              service:
                name: user-profile-service
                port:
                  number: 5002
          - path: /vocabulary-service
            pathType: Prefix
            backend:
              service:
                name: vocabulary-service
                port:
                  number: 5003
